// copied from the node, used to publish the DIDs
syntax = "proto3";

package io.iohk.cvp;

message AtalaOperation {
    oneof operation {
        CreateDIDOperation createDid = 1;
    };
}

message SignedAtalaOperation {
    string signedWith = 1; // id of key used to sign
    bytes signature = 2; // signature of byte encoding of the operation
    AtalaOperation operation = 3;
}
message CreateDIDOperation {
    DIDData didData = 1; // DIDData with did empty id field
}

message DIDData {
    string id = 1; // DID suffix, where DID is in form did:atala:[DID suffix]
    repeated PublicKey publicKeys = 2;
}

message ECKeyData {
    string curve = 1;
    bytes x = 2;
    bytes y = 3;
}

message PublicKey {
    string id = 1;
    KeyUsage usage = 2;
    oneof keyData {
        ECKeyData ecKeyData = 8;
    };
}

enum KeyUsage {
    UNKNOWN_KEY = 0;
    MASTER_KEY = 1;
    ISSUING_KEY = 2;
    COMMUNICATION_KEY = 3;
    AUTHENTICATION_KEY = 4;
}
